Organize pages. Add css and some media.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,34 @@
-Work In Progress
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Bobby Collins</title>
+    <base href="/Users/robertcollins/Documents/GitHub/rcollins130.github.io/index.html">
+    <meta name="viewport" content="width=device-width, initial-scale 1.0">
+    <link rel="stylesheet" href="style.css">
+</head>
 
-rcollins130.github.io
-robertcollins130@gmail.com
+<body>
+    <div id="header">
+        <span class="comment">&#x1F6A7 Work In Progress &#x1F6A7</span>
+        <h1>Bobby Collins</h1>
+        <span class="menu">
+            <ul>
+                <li><a href="index.html" class="active">Index</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </span>
+    </div>
 
+    <div id="about">
+        <p id="work">
+            Part-time Staff Scientist at <a href="https://bbn.com" target="_blank">bbn.com</a> <br>
+        </p>
+        
+        <p id="education">
+            Current Stanford MS Mechanical Engineering '24<br>
+            Harvard SB Mechanical Engineering '20<br>
+        </p>
+    </div>
+</body>
+</html>
