check in local work

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
     <title>Bobby Collins</title>
-    <base href="https://rcollins130.github.io/index.html">
+    <!---<base href="https://rcollins130.github.io/index.html">-->
+    <!---<base href="/Users/robertcollins/Documents/GitHub/rcollins130.github.io/index.html">--->
     <meta name="viewport" content="width=device-width, initial-scale 1.0">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div id="header">
-        <span class="comment">&#x1F6A7 Work In Progress &#x1F6A7</span>
         <h1>Bobby Collins</h1>
         <span class="menu">
             <ul>
@@ -21,12 +21,20 @@
     </div>
 
     <div id="about">
+        <span class="comment">&#x1F6A7 Site Work In Progress &#x1F6A7</span>
+
+        <p id="blurb">
+            Interested in defense tech, distributed sensing, physical simulation, mechanical design, and a lot more. 
+            <a href="contact.html">Get in touch!</a> 
+        </p>
+
         <p id="work">
-            Part-time Staff Scientist at <a href="https://bbn.com" target="_blank">bbn.com</a> <br>
+            Part-time Staff Scientist at <a href="https://bbn.com" target="_blank">bbn.com</a>: 
+            Physical Sciences and Systems Unit, Applied Physical Sciences Group
         </p>
         
         <p id="education">
-            Current Stanford MS Mechanical Engineering '24<br>
+            Stanford MS Mechanical Engineering '24 (Current)<br>
             Harvard SB Mechanical Engineering '20<br>
         </p>
     </div>
