--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,9 @@
 <html>
 <head>
     <title>Bobby Collins</title>
-    <base href="https://rcollins130.github.io/index.html">
+    <!---<base href="https://rcollins130.github.io/index.html">-->
+    <base href="/Users/robertcollins/Documents/GitHub/rcollins130.github.io/index.html">
+
     <meta name="viewport" content="width=device-width, initial-scale 1.0">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -22,10 +24,11 @@
     <div id="contact">
         <ul>
             <!--<li>robert collins 130 at gmail dot com</li>-->
-            <li><a href="mailto:robertcollins130@gmail.com" target="_blank">robertcollins130@gmail.com</a><br></li>
+            <li><a href="mailto:robertcollins130@gmail.com" target="_blank">mailto:robertcollins130@gmail.com</a><br></li>
             <li><a href="https://www.linkedin.com/in/rcollins130/" target="_blank">LinkedIn</a><br></li>
             <li><a href="https://github.com/rcollins130" target="_blank">GitHub</a><br></li>
         </ul>
+        Resume Available Upon Request
     </div>
 </body>
 
