--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1><a href="index.html">Bobby Collins</a></h1>
         <span class="menu">
             <ul>
-                <li><a href="index.html" class="active">Index</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="index.html#contact">Contact</a></li>
                 <li><a href="index.html#projects">Projects</a></li>
             </ul>
