--- a/projects/dogs.html
+++ b/projects/dogs.html
@@ -15,7 +15,7 @@
         <h1><a href="index.html">Bobby Collins</a></h1>
         <span class="menu">
             <ul>
-                <li><a href="index.html">Index</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="index.html#contact">Contact</a></li>
                 <li><a href="index.html#projects" class="active">Projects</a></li>
             </ul>
