--- a/projects/oat.html
+++ b/projects/oat.html
@@ -16,9 +16,9 @@
         <h1><a href="index.html">Bobby Collins</a></h1>
         <span class="menu">
             <ul>
-                <li><a href="index.html" class="active">Index</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="index.html#contact">Contact</a></li>
-                <li><a href="index.html#projects">Projects</a></li>
+                <li><a href="index.html#projects" class="active">Projects</a></li>
             </ul>
         </span>
     </div>
