--- a/projects/oat.html
+++ b/projects/oat.html
@@ -4,8 +4,8 @@
 <html>
 <head>
     <title>Bobby Collins</title>
-    <!---<base href="https://rcollins130.github.io/index.html">-->
-    <base href="/Users/robertcollins/Documents/GitHub/rcollins130.github.io/index.html">
+    <base href="https://rcollins130.github.io/index.html">
+    <!-- <base href="/Users/robertcollins/Documents/GitHub/rcollins130.github.io/index.html"> -->
 
     <meta name="viewport" content="width=device-width, initial-scale 1.0">
     <link rel="stylesheet" href="style.css">
