--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         </p>
         
         <p id="work">
+            2023-Current: Intern at the Defense Innovation Unit (<a href="https://www.diu.mil/" target="_blank">diu.mil</a>)
             2020-2023: Staff Scientist at Raytheon BBN (<a href="https://bbn.com" target="_blank">bbn.com</a>), 
             Physical Sciences and Systems, Applied Physical Sciences Group <br>
             2018-2019: Mechanical Engineering Intern at Midé Technologies (<a href="https://www.mide.com/" target="_blank">mide.com</a>)
@@ -58,11 +59,15 @@
         <h2> Selected Projects </h2>
         <h3> Personal </h3>
         <ul>
+            <li> Rover </li>
+            <ul>
+                <li> Robotic ground rover running the Robot Operating System (ROS2). An upgrade of a <a href="projects/dogs.html">previous project </a>. </li>
+            </ul>
             <li> Apache </li>
             <ul>
                 <li> Raspberry Pi 4 mounted in Harbor Freight Apache 1800. </li>
             </ul>
-            <li> Occidental </li>
+            <li> Dorchester </li>
             <ul>
                 <li> Home server for backups, network attached storage, and some home automation.</li>
             </ul>
