--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h2> About </h2>
 
         <p id="blurb">
-            Interested in defense tech, distributed sensing, underwater acoustics, physical simulation, mechanical design, and a lot more. 
+            Interested in defense tech, autonomous systems, distributed sensing, underwater acoustics, physical simulation, mechanical design, and a lot more. 
             This website is a work in progress - I'm continuing to add information about past projects and updates on current work. 
             <a href="index.html#contact">Get in touch!</a> 
         </p>
@@ -36,8 +36,8 @@
         </p>
         
         <p id="work">
-            2023-Current: Intern at the Defense Innovation Unit (<a href="https://www.diu.mil/" target="_blank">diu.mil</a>)
-            2020-2023: Staff Scientist at Raytheon BBN (<a href="https://bbn.com" target="_blank">bbn.com</a>), 
+            2023-: Intern at the Defense Innovation Unit (<a href="https://www.diu.mil/" target="_blank">diu.mil</a>)<br>
+            2020-2023: Staff Scientist at Raytheon BBN (<a href="https://bbn.com" target="_blank">bbn.com</a>), <br>
             Physical Sciences and Systems, Applied Physical Sciences Group <br>
             2018-2019: Mechanical Engineering Intern at Midé Technologies (<a href="https://www.mide.com/" target="_blank">mide.com</a>)
         </p>
@@ -61,7 +61,7 @@
         <ul>
             <li> Rover </li>
             <ul>
-                <li> Robotic ground rover running the Robot Operating System (ROS2). An upgrade of a <a href="projects/dogs.html">previous project </a>. </li>
+                <li> Robotic ground rover running the Robot Operating System (ROS2). An upgrade of a <a href="projects/dogs.html">previous project</a>.</li>
             </ul>
             <li> Apache </li>
             <ul>
