--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         
         <p id="work">
             2023-: Intern at the Defense Innovation Unit (<a href="https://www.diu.mil/" target="_blank">diu.mil</a>)<br>
-            2020-2023: Staff Scientist at Raytheon BBN (<a href="https://bbn.com" target="_blank">bbn.com</a>), <br>
+            2020-2023: Staff Scientist at Raytheon BBN (<a href="https://bbn.com" target="_blank">bbn.com</a>),
             Physical Sciences and Systems, Applied Physical Sciences Group <br>
             2018-2019: Mechanical Engineering Intern at Midé Technologies (<a href="https://www.mide.com/" target="_blank">mide.com</a>)
         </p>
@@ -104,5 +104,9 @@
             </ul>
         </ul>
     </div>
+    <br>
+    <br>
+    <br>
+    <br>
 </body>
 </html>
