--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </ul>
             <li> Apache </li>
             <ul>
-                <li> Raspberry Pi 4 mounted in Harbor Freight Apache 1800. </li>
+                <li> Raspberry Pi 4 mounted in Harbor Freight Apache 1800, used for prototyping and data collection. </li>
             </ul>
             <li> Dorchester </li>
             <ul>
